--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,15 +1,20 @@
 // Colours
-$primary-colour: #CF794A;
-$secondary-colour: #C5424F;
-$tertiary-colour: #373034;
+$primary-colour: #000f18;
+$secondary-colour: #4079B2;
 
 // Font colours
 $primary-font-colour: #fff;
-$secondary-font-colour: white;
+$secondary-font-colour: #000;
 
 $title-colour: black;
 $title-background-colour: white;
 
 // Link colour
-$link-colour: #0d6efd;
+$link-colour: #4079B2;
+
+// Nav colour
+$nav-color: white;
+
+// Borders
+$photo-card-border: 0.3rem;
 
