--- a/src/scss/components/photo-card.scss
+++ b/src/scss/components/photo-card.scss
@@ -9,5 +9,16 @@
     padding: 1rem;
     border-radius: $photo-card-border;
     height: 100%;
+
+    a {
+      display: block;
+      margin-bottom: 2rem;
+
+      img {
+        height: 20rem;
+        width: 100%;
+        object-fit: cover;
+      }
+    }
   }
 }
