--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12501,6 +12501,15 @@ main > div {
   border-radius: 0.3rem;
   height: 100%;
 }
+.photo-card-container .photo-card a {
+  display: block;
+  margin-bottom: 2rem;
+}
+.photo-card-container .photo-card a img {
+  height: 20rem;
+  width: 100%;
+  object-fit: cover;
+}
 
 @media (max-width: 767.98px) {
   #MainNav #navbarNav {
