--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -10,6 +10,10 @@ p, h1, h2, h3, h4, h5, h6, div, a {
     font-weight: 400;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 600 !important;
+}
+
 body {
     a {
         color: $link-colour;
