--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,8 @@
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 @import '../../node_modules/bootstrap-vue/src/index.scss';
 
+// General
+
 body {
   min-height: 100vh;
   background: $primary-colour;
@@ -28,9 +30,77 @@ header {
   }
 }
 
+// - Text Contain
+.text-contain {
+  width: 70%;
+  margin: 0 auto;
+}
+
+// - Buttons
+.btn {
+  border: 0;
+  padding: $button-padding;
+  font-weight: 600;
+}
+
+.btn-primary {
+  background-color: $button-background-colour;
+  color: $button-colour;
+}
+
+.float-image {
+  position: absolute;
+  z-index: -1;
+}
+
+// Home
+
 main {
   > div {
     margin-bottom: 2rem;
+  }
+}
+
+// About
+.about {
+  .hero {
+    position: relative;
+    height: 50vh;
+    min-height: 300px;
+    background-image: url("https://images.pexels.com/photos/572897/pexels-photo-572897.jpeg?auto=compress");
+    background-position: center 100%;
+    background-size: cover;
+
+    .hero-info {
+      position: absolute;
+      bottom: 0;
+      padding: 2rem 5rem;
+
+        h1 {
+          margin-bottom: 0;
+          font-weight: 800;
+        }
+
+      h3 {
+        font-size: 1.4rem;
+      }
+    }
+  }
+
+  .body {
+    position: relative;
+    margin: 6rem 0;
+    text-align: center;
+
+    .img-handshake {
+      top: -10%;
+      left: -20%;
+    }
+
+    .img-talk {
+      bottom: -10%;
+      right: -25%;
+    }
   }
 }
 
