--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -18,3 +18,7 @@ $nav-color: white;
 // Borders
 $photo-card-border: 0.3rem;
 
+// Buttons
+$button-background-colour: #367CC1;
+$button-colour: $primary-font-colour;
+$button-padding: 0.8rem 4rem;
