--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -22,3 +22,6 @@ $photo-card-border: 0.3rem;
 $button-background-colour: #367CC1;
 $button-colour: $primary-font-colour;
 $button-padding: 0.8rem 4rem;
+
+// Forms
+$input-background: #2a5679;
